--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -8,8 +8,11 @@
 
     <title>My Nice Page</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs5.min.css">
 
     <style>
         .my-footer {
@@ -69,33 +72,24 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <h1 class="mt-3">Search for Availability</h1>
+            <h1 class="mt-5">Search for Availability</h1>
 
-            <form action="reservation.html" method="post" novalidate class="needs-validation">
+            <form action="reservation.html" method="get" novalidate class="needs-validation">
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="row">
                     <div class="col">
                         <div class="row" id="reservation-dates">
-                            <div class="col-md-6">
-                                <label for="start_date">Starting Date</label>
-                                <input required class="form-control" type="date" name="start_date" id="start_date">
-                                <small id="startDateHelp" class="form-text text-muted">Enter your starting date in
-                                    YYYY-MM-DD format</small>
+                            <div class="col">
+                                <input required class="form-control" type="text" name="start" placeholder="Arrival">
                             </div>
-                            <div class="col-md-6">
-                                <label for="end_date">Ending Date</label>
-                                <input required class="form-control" type="date" name="end_date" id="end_date">
-                                <small id="endDateHelp" class="form-text text-muted">Enter your ending date in
-                                    YYYY-MM-DD format</small>
+                            <div class="col">
+                                <input required class="form-control" type="text" name="end" placeholder="Departure">
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <hr>
-
                 <button type="submit" class="btn btn-primary">Search Availability</button>
-
             </form>
         </div>
         <div class="col-md-3"></div>
@@ -129,24 +123,24 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
+
 
 <script>
     console.log("I am printing from javascript");
 
-    (function() {
+    (function () {
         'use strict';
-        window.addEventListener('load', function() {
+        window.addEventListener('load', function () {
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
             let forms = document.getElementsByClassName('needs-validation');
             // Loop over them and prevent submission
-            Array.prototype.filter.call(forms, function(form) {
-                form.addEventListener('submit', function(event) {
+            Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
                     if (form.checkValidity() === false) {
                         event.preventDefault();
                         event.stopPropagation();
@@ -166,6 +160,11 @@
             myEl.classList.add("redText");
         }
     })
+
+    const elem = document.getElementById('reservation-dates');
+    const rangepicker = new DateRangePicker(elem, {
+        format: "yyyy-mm-dd",
+    });
 </script>
 
 </body>
