--- a/html-source/generals.html
+++ b/html-source/generals.html
@@ -68,7 +68,7 @@
 
         <div class="row">
             <div class="col">
-                <img src="static/images/generals-quarters.png"
+                <img src="../static/images/generals-quarters.png"
                      class="img-fluid img-thumbnail mx-auto d-block room-image" alt="room image">
             </div>
         </div>
